Update : (PackageJson) update the start script.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tensor flow face recognition",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mohit Agrawal",
